--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
   background-color: #222;
   height: 150px;
@@ -21,8 +16,19 @@
 .App-intro {
   font-size: large;
 }
+.App-right{
+  float:right;
+  width: 50%
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+}
+.App-left {
+  float:left;
+  width: 50%
+
+}
+.Button-center{
+  bottom: 0;
+  position:fixed;
+  height:30%;
+  width:100%;
 }
